fix: nav bar mobile spacing

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -529,6 +529,18 @@ img.image-block-split {
         padding-top: 20px !important;
     }
 
+    .main-navigation-content {
+        padding: 10px 20px;
+    }
+
+    .main-navigation-content img {
+        max-width: 120px;
+    }
+
+    a.navigation-links.button-link.mobile-menu {
+        padding: 10px 15px;
+    }
+
     .hero-content {
         max-width: 100%;
     }
